<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="Typos">
    <string name="app_name">Owl Application</string>
    <string name="app_login">App login</string>
    <string name="login_image">Login image</string>
    <string name="image_login">Login image</string>
    <string name="email">Email id:</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="pwd">Password:</string>
    <string name="enter_the_password">Enter the password</string>
    <string name="login">login</string>
    <string name="fp">forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">Sign up</string>
    <string name="signup_image">Signup image</string>
    <string name="register">Register</string>
    <string name="Usr">Username:</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="forgot_password">Forgot password</string>
    <string name="newPwd">New password:</string>
    <string name="conPwd">Confirm password:</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_the_password">Confirm the password</string>
    <string name="enter_new_username">Enter new username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="mobile">Mobile number:</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="sendEmail">Send email</string>
    <string name="new_user">New user?</string>
    <string name="study_forgot">Forgot image</string>
    <string name="course1">Arts &amp; Craft</string>
    <string name="topic1">The Basics of Wood-turning</string>
    <string name="subheading1_1">What Is WoodTurning</string>
    <string name="text1_1">Wood-turning is a form of woodworking involving a lathe. With other kinds of woodworking, the wood is stationary and the tool moves to create cuts.\n\nIn wood-turning, the lathe turns the wood on its axis at high revolutions per minute while relatively stationary special cutting tools on a tool rest do the work.\nA wood lathe allows wood-turners to create all kinds of objects, from bowls to stair railings to chess pieces to musical instruments.</string>
    <string name="subheading1_2">History of Wood-turning</string>
    <string name="text1_2">The art on monuments in ancient Egypt offers the first recorded instances of spindle turning. These illustrations showed a strap a helper used to rotate the lathe while another worker cut the wood.\n\n
    The ancient Romans, Chinese, Persians and Arabs had their own variations of the lathe. Early lathe workers would sometimes hold cutting tools with their bare feet while powering the lathe with their hands.\n\nIn the 19th and early 20th centuries, wood-turners in England employed the master-apprentice system in turning shops, where they crafted cups and bowls as well as detailed tables, chairs and staircases. In Germany and Russia, wood-turning was concentrated in villages that specialized in turning toys.\n\nIn the U.S., wood-turning was part of the industrial arts curriculum in public schools, often a prerequisite for furniture-building classes. In the 1970s, interest in hobby wood-turning in the English-speaking world flourished, reviving all things wood-turning.</string>
    <string name="course2">Painting</string>
    <string name="topic2">An introduction to oil painting</string>
    <string name="subheading2_1">What is oil paint?</string>
    <string name="text2_1">There are three main categories of oil paints: traditional oils, alkyd oils and water-mixable oils. These are all composed of pigment and binder. The binder encapsulates and protects the pigment, while it also acts as an adhesive by attaching neighbouring particles to each other.</string>
    <string name="subheading2_2">What ranges do Winsor &amp; Newton have available?</string>
    <string name="text2_2">We currently have 4 ranges of oil paint to suit a variety of different practices.
\n\n
        Winsor &amp; Artists Newton’ Oil Colour range is a traditional oil paint, it provides the widest choice of colours with the highest pigment strength, ensuring the cleanest, brightest colours and best mixes.
\n\n
The Winton Oil Colour range is also a traditional oil, but it is formulated to offer dependable quality at an accessible price; it is ideal for first time artists who want to learn the fundamentals of oil painting and perfect for any artist needing to cover a large area or working on an underpainting.
\n\n
Griffin Alkyd Fast Drying Oil Colour is also made of pigment in oil, but the oil is polymerised through a chemical reaction and the result is a resin-like product that, when mixed with a suitable solvent, takes on many of the properties of traditional oil but has a much faster drying time. It is helpful for underpainting and can be mixed with traditional oils to accelerate drying as well.
\n\n
Artisan Water Mixable Oil Colour is a range of oil colours which can be cleaned up with water instead of solvents, whilst providing all the handling properties of conventional oil colour. The depth of colour, lightfastness, performance and drying times of Artisan allow artists to use this range for all oil colour techniques. It’s also suited to artists working in shared spaces or those who are sensitive to chemicals.</string>
    <string name="course3">Architecture</string>
    <string name="topic3">City Phenomenon between Urban Structure and Composition</string>
    <string name="subheading3_1">Abstract</string>
    <string name="text3_1">Cities are not just a sum of buildings, but especially a set of social relations that their inhabitants develop. Cities are characterized by a wide variety of social groups and lifestyles. An urban composition represents a form of the city in which it gets a formal order, so that the shape of any urban ensemble is not linked to a random phenomenon, but to an intervention mastered and understood as such. For the city, the urban composition represents what the architectural composition represents for a building. This concept regarding the composition is common both to the architecture and to the city. The main property of the composition is that it transforms a possibly dispersed ensemble into a whole, resolving the contradictions that arise when the requirements and conditions of the project are numerous. Spatial forms and urban compositions are built over time, longer than that of architectural composition. On the other hand, “design of the urban environment” is understood by us as a complex formation of public spaces of the city, located on the ground floor level of the city building and ensuring the vital activity of the urban community. This chapter will study the city phenomenon on a large scale.</string>
    <string name="subheading3_2">Introduction</string>
    <string name="text3_2">Cities cannot be defined only by their administrative boundaries, and urban policies can no longer target only administrative units at the city level. The importance of multilevel governance has been strongly emphasized by the European Parliament and the Committee of the Regions. This is in full accordance with the conclusions of this report: policies at European, national, regional, and local levels must be correlated with each other. In any urban development and expansion plan, it must be taken into account that natural systems have a limited capacity to respond and adjust to changes produced by man. From the perspective of urban sustainable development, any impact of urban activities on the environment must be minimized. The idea of sustainable urban development was born in the 1970s, as a result of deep concern about a development model that threatened the environment and the vitality of the planet. There is a strong belief that, apart from government programs and the private sector initiative, local communities need to be actively involved in this process. This concept is at the basis of formulating sustainable policies, which try to harmonize the relationship between population, environment, and industrial development. Controlled urban expansion is also known as smart growth. The experience of the states of the European Union shows that metropolitan areas, well managed, reach economic competitiveness quickly (economic policies can effectively attract funds and investors and can energize the construction, services, and tourism sectors), and their future development is sustainable (economic, cultural, social, ecological, and policies are harmonized). Such a project aims at decongesting large cities, establishing unitary architectural development, accessing European funds for regional development, and, thereby, creating civilized living conditions for all inhabitants of metropolitan areas. More than two-thirds of Europe’s population lives in urban areas. Cities are places where problems arise and solutions are found. They represent a fertile ground for science and technology, for culture and innovation, for individual and collective creativity, as well as for mitigating the effects of climate change. However, cities are also places where problems such as unemployment, discrimination, and poverty are concentrated.
\n\n
The objective of the Thematic Strategy for the urban environment, adopted in 2006, at European level, “to contribute to a better quality of life through an integrated approach to urban areas,” in conjunction with the effort to contribute to “a higher level of quality of life and social well-being of citizens, by ensuring an environment in which the level of pollution does not generate harmful effects on human health and the environment and by encouraging the sustainable urban development,” defined, for the next years, the priorities, the direction, and the means by which this strategy to be applied. It follows from this strategy that most cities face a common set of basic problems, such as those related to air quality, heavy traffic, high noise levels, low-quality construction, abandoned land, greenhouse gas emissions, non-systematic areas, generation of waste and wastewater, and providing public services to the population. Among the causes of these problems is the increase in the use of resources per inhabitant, the increase in the number of individual households, the demographic changes, and the increase in the number of personal property machines. The solutions must be forward-looking, taking into account aspects of risk prevention, the anticipation of climate change, or the progressive reduction of dependence on fossil fuels. The activities in the urban environment are sources of pollution for all environmental factors. Therefore, they must be controlled and managed to minimize the impact on the environment.
\n\n
 What are the five challenges for urban planning theory?
\n
Urban planning deals with the design of building groups, settlements, neighborhoods, and in particular public spaces. Urban design can be understood as a term for the visible and creative aspects of urban planning. According to a broader understanding, the concept of urban planning encompasses the totality of planning and construction measures for urban and rural spatial planning aimed at creating the prerequisites for the coexistence of people in an environment appropriate to them in the pursuit of sociopolitical goals. In conclusion, urban design is a product of the collaboration on site of elements of the urban framework, determined functionally within the configuration spatial structure. It can be understood as a term for the visible and creative aspects of urban planning. Traditionally it has been referred to a discipline within urban planning, landscape architecture, or more simultaneously linked to emerging disciplines such as landscape urbanism.</string>
</resources>